--- a/app/sass/global.sass
+++ b/app/sass/global.sass
@@ -2,3 +2,16 @@
   box-sizing: border-box
   font-family: 'Mulish', sans-serif
   font-size: 14px
+  
+.container
+  width: 94.93%
+  margin: 0 auto
+
+main
+  margin-left: 255px
+  padding: 30px 0 32px 0
+  background: #F7F8FC
+  
+
+h1
+  margin: 0
