--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -14,6 +14,7 @@
     &__account
         display: flex
         justify-content: space-between
+        align-items: center
         width: 200px
         padding-left: 32px
         position: relative
