--- a/app/sass/_mixins.sass
+++ b/app/sass/_mixins.sass
@@ -5,3 +5,9 @@
     left: 33px
     top: 50%
     transform: translateY(-50%)
+
+=btn-style-reset
+    border: none
+    outline: none
+    background: none
+    cursor: pointer
