--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -35,6 +35,13 @@
         outline: none
         cursor: pointer
         background: url('../images/photos/avatar.jpg') center (center/cover) no-repeat
+    &__name
+        text-decoration: none
+        font-weight: 600
+        font-size: 14px
+        line-height: 20px
+        letter-spacing: 0.2px
+        color: #252733
     &__search
         display: flex
         margin-right: 26px
