--- a/app/sass/_tickets.sass
+++ b/app/sass/_tickets.sass
@@ -63,6 +63,9 @@
         transition: 0.2s all ease
         &:hover
             background: rgba(55, 82, 255, 0.04) 
+        &-list
+            padding: 0
+            margin: 0
     &__info
         display: flex
         justify-content: flex-start
