+remove task (+bug with adding)

--- a/app/sass/_summary.sass
+++ b/app/sass/_summary.sass
@@ -56,6 +56,7 @@
         align-items: center
         padding: 0 32px 
         border-bottom: 1px solid #DFE0EB
+        transition: 0.3 all ease
         &:last-child
             border: none
         a
